Closed Bug 1555783 Opened 6 years ago Closed 6 years ago

Firefox Wayland returns IPDL protocol error on new tab creation

Categories

(Core :: Widget: Gtk, defect, P3)

67 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: simongethurston, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0

Steps to reproduce:

Opened Firefox via terminal in SwayWM on Arch Linux.

Actual results:

"IPDL protocol Error: Received an invalid file descriptor" returned in the terminal multiple times on initial load, and subsequently with each new tab.

Expected results:

No error should have been returned on load and on tab creation.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Blocks: wayland
Priority: -- → P3
Status: UNCONFIRMED → NEW
Ever confirmed: true

That comes from SendBackUpXResources() - generally it's because we can't use NPAPI plugins under wayland.

Assignee: nobody → stransky

Pushed by ncsoregi@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a32eceb33855
[Wayland] Don't send XDisplay fd over IPC on Wayland, r=jmathies

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: