Bug 1555783 - [Wayland] Don't send XDisplay fd over IPC on Wayland, r=jmathies

Differential Revision: https://phabricator.services.mozilla.com/D33255